# transformer

./: .gitignore  CLAUDE.md  Guide.md  README.md  pyproject.toml
scripts/: train.py  train_jax.py  train_mlx.py
src/transformer/: __init__.py  generate.py  layers.py  train.py
src/transformer_jax/: __init__.py  generate.py  layers.py  train.py
src/transformer_mlx/: __init__.py  generate.py  layers.py  train.py
tests/: test_smoke.py  test_smoke_jax.py  test_smoke_mlx.py
